# aisweeper

./: Cargo.toml  README.md
src/: gameboard.rs  input.rs  lazy.rs  logged.rs  main.rs  ui.rs
src/gameboard/: errors.rs  flatboard.rs  interface.rs  tiles.rs
src/types/: errors.rs  gameboard.rs  mod.rs  tiles.rs
src/types/gameboard/: flatboard.rs
