[package]
name = "aisweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"

[dependencies]
rand = "0.8"
thiserror = "1.0"
cursive = { version = "0.18", default-features = false, features = ["crossterm-backend"]}
time = "0.3"
